# FRIDAY

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  .trufflehogignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GITLAB_RUNNER_SETUP.md  README.md  cli.py  commitlint.config.js  docker-compose.yml  friday  friday.bat  friday2  friday2.bat  jarvis  jarvis.bat  jarvis_cli.py  pyproject.toml  run.bat  run.sh  run_local.sh  run_native.bat  run_native.sh
.github/workflows/: ci.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json
Friday/: AGENTS.md
backend/: Dockerfile  friday_memory.db  main.py  requirements.txt  test_api.py
backend/ai/: ollama_client.py  rag_pipeline.py
backend/api/: chat.py  conversations.py  docs.py  health.py  memory.py  plugins.py  search.py  speech.py
backend/core/: config.py  db.py  rag.py
backend/database/: schema.py
backend/documents/: chunker.py  embeddings.py  ocr.py  service.py  transcriber.py
backend/memory/: vector_store.py
backend/plugins/: runner.py
backend/speech/: stt.py
backend/tts/: mac_tts.py
friday-mobile/: .gitignore  FRIDAY-AI.apk  README.md  package-lock.json  package.json
friday-mobile/www/: index.html
frontend/: Dockerfile  eslint.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  (+1 more)
hologram-hud/: canvas.js  launch.sh  launch_with_backend.sh  styles.css
mobile-app/: README.md  capacitor.config.json
tests/: test_core.py
website/: app.js  index.html  sound.js
(+38 files in other folders)
