[project]
name = "friday-ai"
version = "0.2.0"
description = "Offline-first AI voice and text assistant"
requires-python = ">=3.13"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4", "RUF"]
ignore = ["B904", "SIM117"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
warn_unused_configs = true
show_error_codes = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["ollama.*"]
ignore_missing_imports = true

[tool.bandit]
exclude = ["venv", "__pycache__", "tests", "documents"]
skips = ["B101", "B301", "B303", "B404", "B603", "B607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["backend"]
omit = ["*/venv/*", "*/__pycache__/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise AssertionError",
    "raise NotImplementedError",
]
